Deployments/grafana-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kuberenetes.io/name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        app.kuberenetes.io/name: grafana
    spec:
      containers:
        - ports:
            - containerPort: 3000
          volumeMounts: []
          command: []
          name: grafana
          image: grafana/grafana:latest
