Deployments/GRAFANA-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
