Deployments/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    app.kuberenetes.io/name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Forces HTTP to HTTPS redirect
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false" 
spec:
  ingressClassName: nginx
  rules:
    - host: console.cosmose.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
